create dynamic resume creation using json & js

--- a/resume.html
+++ b/resume.html
@@ -2,9 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="resume.css">
+    <title>Resume</title>
   </head>
-  <body style="background:#212343;">
-ghfgfhkhfhkfkhfghfgh
+  <body>
+    <div class="main">
+
+      <div class="left">
+        <div class="left1">
+        <img src="images/img.png" alt="image">
+        <h2>Rajesh Nalleboina</h2>
+        <h4>rajesh.n@apssdc.in</h4>
+      </div>
+      <hr>
+      <div class="detais">
+        <h5>S/o Ravindra Babu</h5>
+        <h5>5-69,Vangipuram</h5>
+        <h5>Prathipadu</h5>
+        <h5>Guntur-522015</h5>
+        <h5>9100***113</h5>
+      </div>
+      </div>
+      <div class="right" id="right">
+        <!-- fhsrdtyrtj -->
+      </div>
+    </div>
+    <script type="text/javascript" src="main.js" async>
+    </script>
   </body>
 </html>
